	* gm2/gm2-gcc/m2block.c:  assert_global_names (New function).  m2block_GetGlobals
	  call assert_global_names and return global_binding_level->names.
	* gm2/gm2-gcc/m2block.def:  GetGlobals (New procedure function).
	* gm2/gm2-gcc/m2block.h:  GetGlobals (New procedure function).
	* gm2/gm2-gcc/m2decl.c:  added debugging hooks to detect variables being declared.

2013-07-08      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed installation rules for library modules.
	* gm2/gm2.texi:  added information on how to build gm2 grafted onto gcc-4.7.3.
	* gm2/gm2spec.c:  many changes which reintroduce the gm2 linking mechanism and
	  via specs.  Many changes due to the differences between gcc-4.7.3 and gcc-4.1.2.
	* gm2/lang-specs.h:  corrected dates.
	* gm2/gm2-compiler/M2Defaults.def:  corrected dates.
	* gm2/gm2-compiler/M2Defaults.mod:  corrected dates.
	* gm2/gm2-compiler/M2FileName.def:  corrected dates.
	* gm2/gm2-compiler/M2FileName.mod:  corrected dates.
	* gm2/gm2-compiler/M2Options.mod:  added Debugging and printf1.
	* gm2/gm2-compiler/M2Search.def:  corrected dates.
	* gm2/gm2-compiler/M2Search.mod:  corrected dates.
	* gm2/gm2-compiler/gm2lcc.mod:  corrected dates.
	* gm2/www/Makefile.in:  commented out texisrc subcomponents and fixed path for
	  TEXI2HTML.
	* gm2/patches/gcc/4.7.3/01-patches:  (Re-made patch).
	* gm2/patches/gcc/4.7.3/02-patches:  (Re-made patch).
	* gm2/patches/gcc/4.7.3/03-patches:  (Re-made patch).
	* gm2/patches/gcc/4.7.3/04-patches:  (Re-made patch).
	* gm2/patches/gcc/4.7.3/05-patches:  (New file).

2013-06-14      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed many of the library building rules.
	* gm2/Makefile.in:  added description comment.
	* gm2/gm2.texi:  updated dependencies for building gm2 on the gcc-4.7.x.
	* gm2/examples/pge/rotating-line.asc:  rebuilt the .asc.
	* gm2/gm2-libs-ch/termios.c:  include correct target/host configure header file.
	* gm2/gm2-libs-min/libc.c:  updated copyright dates.